--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Medx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jdbc-postgresql.jar=/home/router/Downloads/jdbc-postgresql.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jdbc-postgresql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
